# audiofingerprinting

./: ProjectHome.md  README.md
AudioSimilarityMeasure/: AudioSimilarityMeasure.sln
AudioSimilarityMeasure/Audio.FooIdFingerprinting_Source/: Fingerprinting.Audio.FooIdFingerprinting.csproj
AudioSimilarityMeasure/Audio.Wav_Source/: AssemblyInfo.cs  Fingerprinting.Audio.Wav.csproj
AudioSimilarityMeasure/AudioSimilarityMeasure_Source/: AssemblyInfo.cs  AudioSimilarityMeasure.csproj
AudioSimilarityMeasure/Runtime.InteropServices_Source/: Fingerprinting.Runtime.InteropServices.csproj
Exocortex.DSP.v1/src/: Exocortex.DSP.v1.csproj
Libraries/MathNet.Iridium/: Readme.txt
SoundCatcher/SoundCatcher/: AudioFrame.cs  FifoStream.cs  FormAboutDialog.Designer.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormSettingsDialog.resx  FourierTransform.cs  PitchShifter.cs  Program.cs  SoundCatcher.csproj  WaveIn.cs  WaveOut.cs  WaveStream.cs  app.config
SoundCatcher/mp3sharp/: Mp3Sharp.csproj  Mp3Stream.cs  Sample.cs
SoundViewer/: SoundViewer.sln
SoundViewer/SoundViewer/: AudioFrame.cs  Form1.Designer.cs  Form1.cs  Program.cs  SignalGenerator.cs  SoundViewer.csproj  WaveNative.cs
fftwlib/fftwlib/: fftwlib.csproj  fftwlib.sln
libFooID/: fooid.c  fooid.h  harmonics.c  regress.h  s_fft.c
libFooID/libresample/: filterkit.h  resample.c  resample.h
libFooID/win32/: libFooID.vcxproj.filters  libFooID_dynamic.vcxproj  libFooID_dynamic.vcxproj.filters
libofa/: autogen.sh
libofa/examples/: wavefile.cpp
trunk/libFooID/: s_fft.h  (+6 more)
trunk/libofa/include/: Makefile.am
(+164 files in other folders)
